--- a/src/style/variable.less
+++ b/src/style/variable.less
@@ -12,3 +12,7 @@
 @alert-success-bg-color: @success-color;
 @alert-warning-bg-color: @warning-color;
 @alert-danger-bg-color: @danger-color;
+@disabled-color: #d0d0d0;
+@theme-color: #20a19f;
+@light-color: #fff;
+@dark-color: #000;
